<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_top"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/TitleTextViewStyle"
            android:text="@string/home_path" />

        <TextView
            android:id="@+id/learnPortalBtn"
            style="@style/MainButton.Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/learn_btn"
            android:text="@string/learnPortalBtn" />

        <TextView
            android:id="@+id/practicePortalBtn"
            style="@style/MainButton.Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/practice_btn"
            android:text="@string/practicePortalBtn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
